--- a/Index.css
+++ b/Index.css
@@ -1,1 +1,45 @@
-Primeira versão(Não responsivo)
+body{
+  color: white;
+  background-color: black;
+}
+ul{
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  align-items: center;
+  padding: 16px;
+}
+a{
+  color: white;
+}
+header img{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 6px solid blue;
+}
+.center{
+  text-align: center;
+}
+h1{
+  color: blue;
+}
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer a{
+  margin: 20px;
+  text-align: center;
+}
+.container{
+  padding: 0px 10px;
+}
+nav a:hover{
+  color: blue;
+}
+footer img{
+  width: 50px;
+  height: 50px;
+}
