--- a/Index.css
+++ b/Index.css
@@ -4,13 +4,16 @@ body{
 }
 ul{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between;q
   list-style-type: none;
   align-items: center;
   padding: 16px;
 }
 a{
   color: white;
+}
+p{
+  font-size: 20px;
 }
 header img{
   width: 150px;
@@ -22,7 +25,9 @@ header img{
   text-align: center;
 }
 h1{
+  font-size: 50px;
   color: blue;
+}
 }
 footer{
   display: flex;
@@ -42,4 +47,13 @@ nav a:hover{
 footer img{
   width: 50px;
   height: 50px;
+}
+@media screen and (min-width: 1020px){
+  header img{
+    height: 30vh;
+    width: 30vh;
+  }
+  p{
+    
+  }
 }
