--- a/Index.css
+++ b/Index.css
@@ -1,10 +1,11 @@
 body{
   color: white;
   background-color: black;
+  font-family: Helvetica;
 }
 ul{
   display: flex;
-  justify-content: space-between;q
+  justify-content: space-between;
   list-style-type: none;
   align-items: center;
   padding: 16px;
@@ -28,13 +29,12 @@ h1{
   font-size: 50px;
   color: blue;
 }
-}
 footer{
   display: flex;
   align-items: center;
   justify-content: center;
 }
-footer a{
+a{
   margin: 20px;
   text-align: center;
 }
@@ -52,8 +52,5 @@ footer img{
   header img{
     height: 30vh;
     width: 30vh;
-  }
-  p{
-    
   }
 }
